# MacrosAI

./: .env.example  .gitignore  AGENTS.md  Pitch.md  README.md  package-lock 2.json  package-lock.json  package.json  render.production.yaml  render.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_local_password_hash.py  0003_add_auth_sessions.py  0004_add_audit_logs.py  0005_add_recipes.py  0006_add_item_sort_order.py  0007_add_meal_type.py  0008_add_goal_effective_date_index.py  0009_add_goal_direction_preference.py  0010_add_theme_preference.py  0011_add_onboarding_personalization.py  0012_add_meal_idempotency_key.py  (+22 more)
apps/api/app/: main.py
apps/api/living_nutrition_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: __init__.py  conftest.py  http_client.py  test_admin_audit.py  test_admin_correction_reports.py  test_ai_quota.py  test_analysis_jobs.py  test_app_lifecycle.py  test_audit_delivery.py  test_auth_goals.py  test_calculations.py  test_clerk_jwt_verification.py  test_config.py  test_error_reporting.py  test_food_detail.py  test_food_quality.py  test_food_source_refresh_worker.py  test_free_preview_ai_guard.py  test_hydration_entries.py  test_idempotency.py  test_image_lifecycle.py  test_insights.py  test_meal_analyzer.py  test_meal_persistence.py  test_metrics.py  test_nutrition_label_analyzer.py  test_open_food_facts_provider.py  test_owner_authorization.py  test_private_image_storage.py  test_provider_circuit_breaker.py  test_provider_http.py  test_provider_registry.py  test_rate_limit.py  test_recipes.py  test_sqlite_schema_bootstrap.py  test_user_data_export.py  test_weight_entries.py  test_worker_heartbeats.py  test_worker_startup.py
(+269 files in other folders)
