[project]
name = "living-nutrition-api"
version = "0.1.0"
description = "FastAPI backend for Living Nutrition"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "boto3>=1.35.0",
  "fastapi>=0.116.0",
  "httpx>=0.27.0",
  "passlib[bcrypt]>=1.7.4",
  "Pillow>=11.0.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "PyJWT[crypto]>=2.10.1",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sentry-sdk>=2.54.0",
  "sqlalchemy>=2.0.31",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.5"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
